Fixed alignment issues in CSS

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -54,7 +54,11 @@ input {
 
 #app, .container {
   width: 100%;
-  height: 100vh; 
+  height: 100%; 
+}
+
+.container {
+  position: relative;
 }
 
 
@@ -65,7 +69,6 @@ input {
   position: relative;
   height: 10%;
   width: 100%; 
-  margin: auto;
   background-color: #1F3D45;
   margin: 0;
 }
@@ -84,8 +87,8 @@ input {
 #login-button {
   position: absolute;  
   top: 25%; 
-  right: 1rem;
-  width: 8rem;
+  right: 0;
+  width: 5rem;
   height: 3rem;
   font-size: 1rem;
   font-weight: 900;
@@ -100,7 +103,7 @@ input {
 
 .container-main {
   height: 50%; 
-  margin-top: 5rem;
+  margin-top: 4rem;
 }
 
 /* HOMEGRAPH  */
@@ -129,7 +132,7 @@ input {
 }
 
 .about p {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   margin: 1rem 3rem 1rem 3rem;
   font-style: italic;
   color:  #7AB0AD;
@@ -138,12 +141,13 @@ input {
 /* FOOTER */
 
 .footer {
+  width: 100%;
   height: 5%;
   background-color: #1F3D45;
   text-align: left;
   border-top: 2px solid  #7AB0AD;
   margin-top: 5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   color: #E8E8E8;
 }
 
@@ -196,4 +200,22 @@ input {
   font-size: 15px;
   color: #E8E8E8;
   font-weight: 500;
+}
+
+/* MEDIA QUERIES */
+
+@media only screen and (min-width: 800px) {
+
+  .container {
+    height: 100vh;
+  }
+
+  .footer {
+    position: absolute;
+    bottom: 0;
+  }
+
+  .about p {
+    font-size: 1.6rem;
+  }  
 }
